Fix items displaying outside of the container on mobile cart page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -536,10 +536,6 @@ section {
     border: 1px solid #264653;
 }
 
-.mobile-cart-container {
-    border: 1px solid #264653;   
-}
-
 .cart-mobile-header {
     text-align: center;
     background-color: #264653;
